Added client side JS for the APPs user interface

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <div id='messages'></div>
       <form id='send-form'>
         <input id='send-message'/>
-        <input id='send-button' type='submit'/>
+        <input id='send-button' type='submit' value='Send' />
 
         <div id='help'>
           Chat commands:
