--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,28 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css"></link>
   </head>
   <body>
-    <div id='content'>
-      <div id='room'></div>
-      <div id='room-list' ></div>
-      <div id='messages'></div>
-      <form id='send-form'>
-        <input id='send-message'/>
-        <input id='send-button' type='submit' value='Send' />
+    <div class='wrapper'>
+      <div id='content'>
+        <div id='room'></div>
+        <div id='room-list' ></div>
+        <div id='messages'></div>
+        <form id='send-form'>
+          <input id='send-message'/>
+          <input id='send-button' type='submit' value='Send' />
 
-        <div id='help'>
-          Chat commands:
-          <ul>
-            <li>Change nickname: <code>/nick [username]</code></li>
-            <li>Join/create room: <code>/join [room name]</code></li>
-          </ul>
-        </div>
-      </form>
+          <div id='help'>
+            Chat commands:
+            <ul>
+              <li>Change nickname: <code>/nick [username]</code></li>
+              <li>Join/create room: <code>/join [room name]</code></li>
+            </ul>
+          </div>
+        </form>
+      </div>
+      <div class="push"></div>
+    </div>
+    <div class='footer'>
+      
     </div>
     <script src='/socket.io/socket.io.js' type='text/javascript'></script>
     <script src='http://code.jquery.com/jquery-1.8.0.min.js' type='text/javascript'></script>
